@@ -128,6 +128,7 @@
     <Compile Include="ControllerTreeTestCase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="RequiresVerbTestCase.cs" />
     <Compile Include="DefaultControllerFactoryTestCase.cs">
       <SubType>Code</SubType>
     </Compile>
