@@ -122,6 +122,7 @@
     <Compile Include="Attributes\ControllerDetailsAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Attributes\RequiresVerbAttribute.cs" />
     <Compile Include="Attributes\DataBindAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
